# recall

./: Cargo.toml  README.md
hooks/: bash.sh  fish.fish  powershell.ps1  zsh.sh
src/: cli.rs  config.rs  db.rs  error.rs  format.rs  lib.rs  main.rs  models.rs  shell.rs
src/commands/: clean.rs  completions.rs  export.rs  history.rs  hook.rs  init.rs  log.rs  mod.rs  search.rs  stats.rs  undo.rs  unhook.rs
tests/: cli_test.rs  db_test.rs  format_test.rs  shell_test.rs
tests/fixtures/: sample.bashrc  sample.zshrc  sample_profile.ps1
